Fixed animation on iPhone

--- a/style.css
+++ b/style.css
@@ -234,15 +234,22 @@ input[type=button], button {
 
 #animation-container {
 	height: 28px;
+	width: 100%;
+	position: relative;
 }
-#animation {
+.animation {
 	margin: auto;
-	width: fit-content;
 	display: block;
 	transform: scale(2);
 	transform-origin: bottom;
 	image-rendering: pixelated;
 	mask-image: linear-gradient(to right, transparent 0%, black 5%, black 95%, transparent 100%);
+	width: fit-content;
+	position: absolute;
+	left:0;
+	right:0;
+	top:0;
+	opacity: 0;
 }
 
 #about-btn {
